Fix little misalignment of messageindex with long subject and locked/pinned topics

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -1899,10 +1899,9 @@ img.new_posts {
 }
 .topic_name h4 {
 	line-height: 1.429em;
-	display: inline-block;
 	padding-right: 30px;
 	word-break: break-all;
-    word-wrap: break-word;
+	word-wrap: break-word;
 }
 .topic_name h4 a {
 	font-weight: bold;
